--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -61,3 +61,23 @@
 	margin-boton: 2;
 	font-size: 18;
 }
+
+.links {
+	position: fixed;
+	bottom: 5;
+	left: 5;
+}
+
+.links * {
+	display: inline;
+	position: relative;
+	text-decoration: none;
+}
+
+.links *:hover {
+	text-decoration: underline;
+}
+
+title {
+	display: none;
+}
